# souffle

./: .cpp  .gitignore  .souffle-sh  .travis.yml  CMakeLists.txt  README.md  a.dl  comment2.json  comment2_0.cpp  comment2_1.cpp  configure.ac  souffle.sh  x.html  x.json  x_0.cpp  x_1.cpp  x_2.cpp  x_3.cpp  x_4.cpp
.travis/: after_failure.sh  bintray_json.sh  checkStyle.sh  coveralls.sh  init.sh  init_make_package.sh  init_test.sh  init_test_64bit.sh  install.sh  run.sh  run_test.sh  run_test_format.sh  test_make_install.sh
.travis/docker/ubuntu1604/: Dockerfile
.travis/linux/: clang_install.sh  install_centos_deps.sh  install_debian_deps.sh  install_fedora_deps.sh  make_centos_package.sh  make_fedora_package.sh  make_package.sh  make_rpm_package.sh
.travis/osx/: install.sh  install_withgcc.sh  make_package.sh
debian/: changelog.in  control
docker/: Dockerfile.centos_centos7  Dockerfile.oraclelinux_7.3  Dockerfile.ubuntu_xenial  run.sh  souffle-docker.sh
git/hooks/: pre-commit
samples/: README  fullCIAnalysis.dl  fullCSAnalysis.dl  rename.sh
samples/common/: common.dl  edb.dl  openWorld-external.dl  restrictedPackages.dl  types.dl
samples/java-ci-pointsto/: ci-pointsto.dl
samples/java-cs-pointsto/: cs-pointsto.dl
src/: .gitignore  AstAnalysis.h  AstArgument.h  AstAttribute.h  AstClause.cpp  AstClause.h  AstComponent.h  AstComponentChecker.cpp  AstComponentChecker.h  AstIODirective.h  AstLiteral.h  AstLogStatement.h  AstNode.h  AstParserUtils.cpp  AstParserUtils.h  AstPragma.cpp  AstPragma.h  AstProgram.cpp  AstProgram.h  AstRelation.h  AstSemanticChecker.cpp  AstSemanticChecker.h  AstSrcLocation.h  AstTransformer.cpp  AstTransformer.h  AstTransforms.cpp  AstTransforms.h  AstTranslationUnit.h  AstTranslator.cpp  AstTranslator.h  AstTuner.cpp  AstTuner.h  AstType.h  AstTypeAnalysis.cpp  AstTypeAnalysis.h  AstTypes.h  AstVisitor.h  AutoIndex.cpp  AutoIndex.h  BTree.h  (+135 more)
src/ast/: Analysis.h  Argument.cpp  Argument.h  AstAnalysis.h  AstArgument.cpp  AstArgument.h  AstAttribute.h  AstClause.cpp  AstClause.h  AstComponent.h  AstComponentChecker.cpp  AstComponentChecker.h  AstIODirective.h  AstLiteral.h  AstLogStatement.h  AstNode.h  AstParserUtils.cpp  AstParserUtils.h  AstPragma.cpp  AstPragma.h  AstProgram.cpp  AstProgram.h  AstRelation.h  AstRelationIdentifier.h  AstSemanticChecker.cpp  AstSemanticChecker.h  AstSrcLocation.cpp  AstSrcLocation.h  AstTransformer.cpp  AstTransformer.h  AstTransforms.cpp  AstTransforms.h  AstTranslationUnit.h  AstTranslator.cpp  AstTranslator.h  AstType.h  AstTypeAnalysis.cpp  AstTypeAnalysis.h  AstTypes.h  AstUtils.cpp  (+44 more)
src/profile/: Cli.h  EventProcessor.h  Iteration.h  OutputProcessor.h  ProfileDatabase.h  ProgramRun.h  Reader.h  Relation.h  StringUtils.h  Tui.h  html_string.h
src/profilerlib/: Cell.h  Cell.hpp  CellInterface.h  CellInterface.hpp  Cli.cpp  Cli.h  Cli.hpp  DataComparator.h  DataComparator.hpp  Iteration.cpp  Iteration.h  Iteration.hpp  OutputProcessor.cpp  OutputProcessor.h  OutputProcessor.hpp  ProfileDatabase.cpp  ProfileDatabase.h  ProgramRun.cpp  ProgramRun.h  ProgramRun.hpp  Reader.cpp  Reader.h  Reader.hpp  Relation.cpp  Relation.h  Relation.hpp  Row.h  Row.hpp  Rule.cpp  Rule.h  Rule.hpp  StringUtils.cpp  StringUtils.h  StringUtils.hpp  Table.cpp  Table.h  Table.hpp  Tui.cpp  Tui.h  Tui.hpp  (+6 more)
src/test/: ast_parser_utils_test.cpp  ast_program_test.cpp  ast_utils_test.cpp  binary_relation_test.cpp  btree_multiset_test.cpp  btree_set_test.cpp  compiled_index_utils_test.cpp  compiled_ram_index_utils_test.cpp  compiled_ram_relation_test.cpp  compiled_ram_tuple_test.cpp  compiled_relation_test.cpp  file_format_converter_test.cpp  graph_utils_test.cpp  matching_test.cpp  ram_executor_test.cpp  ram_relation_stats_test.cpp  symbol_table_test.cpp  test.h  trie_test.cpp
tests/: Makefile.am  evaluation.at  example.at  fastevaluation.at  interface.at  profile.at  provenance.at  semantic.at  syntactic.at  testsuite.at
tests/evaluation/components/: components.dl
tests/evaluation/count_sccs2/: count_sccs2.dl
tests/evaluation/existential/: existential.err
tests/evaluation/inline_negation1/: inline_negation1.dl  inline_negation1.err
tests/evaluation/inline_nqueens/: inline_nqueens.dl
tests/evaluation/magic_goal/: magic_goal.dl
tests/evaluation/magic_hmmer/: magic_hmmer.dl
tests/evaluation/magic_liberal_identifiers/: magic_liberal_identifiers.dl
tests/evaluation/magic_nqueens/: magic_nqueens.err
tests/evaluation/magic_string_substr/: magic_string_substr.dl
tests/evaluation/unused_constraints/: unused_constraints.dl  unused_constraints.err
tests/example/amicable/: amicable.dl
tests/example/flights2/: flights.dl  flights2.dl
tests/example/input_output/: input_output.dl
tests/example/longest_path/: longest_path.csv  longest_path.dl
tests/example/magic_sequences/: magic_sequences.dl
tests/example/planar/: planar.dl
tests/interface/error/: driver.cpp  error.err
tests/interface/load_print/: load_print.out
tests/interface/signal_error/: driver.cpp
tests/profile/recursive/: recursive.dl
tests/provenance/cprog1/: cprog1.dl  cprog1.out
tests/provenance/negation/: negation.dl  negation.in  negation.out
tests/provenance/negation-records/: negation-records.dl  negation-records.out
tests/provenance/path/: path.dl  path.out
tests/provenance/path-records/: path-records.dl  path-records.in  path-records.out
tests/semantic/aggregate1/: aggregate1.err
tests/semantic/aggregate2/: aggregate2.err
tests/semantic/bool/: bool.dl
tests/semantic/comp_opt/: comp_opt.dl  comp_opt.err
tests/semantic/disjoint_names2/: disjoint_names2.err
tests/semantic/inline_cycle1/: inline_cycle1.err
tests/semantic/inline_negation/: inline_negation.dl  inline_negation.err
tests/semantic/inline_output/: inline_output.err
tests/semantic/load3/: load3.err
tests/semantic/rqualifiers/: rqualifiers.dl
tests/semantic/rule_grounded/: rule_grounded.err
tests/semantic/store3/: BB.sqlite.output  store3.dl
tests/semantic/store5/: store5.out
tests/semantic/strconv/: strconv.dl
(+22 files in other folders)
